# airbus_ghalia

./: .gitignore  pyproject.toml  updated_list_labels_folders_ok.txt
src/: classes_reader.py  ground_truth.py  sat_image_reader.py  subfolder.py
