[tool.poetry]
name = "airbus-ghalia"
version = "0.1.0"
description = ""
authors = ["ghaliac <ghalia.chaoui@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
rasterio = "^1.4.3"
pandas = "^2.2.3"
pillow = "^11.0.0"
geopandas = "^1.0.1"
plotly = "^5.24.1"
notebook = "^7.3.2"
ipykernel = "^6.29.5"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
